--- a/src/components/banner.module.css
+++ b/src/components/banner.module.css
@@ -1,11 +1,55 @@
 .BannerSection {
     width: 100%;
     min-width: 100%;
-    min-height: 30rem;
+    min-height: 35rem;
     background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0, 132, 196, 0.45) 66%, rgba(0, 132, 196, 0.25) 100%), url('../images/people-running-marathon.jpeg');
-    background-position: center center;
+    background-position: top center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: local;
     margin: 0 0 1rem 0;
+}
+
+
+
+@media screen and (max-width:1680px) {
+
+}
+
+
+@media screen and (max-width:1280px) {
+
+}
+
+
+@media screen and (max-width: 980px) {
+
+}
+
+
+
+@media screen and (max-width: 767px) {
+
+
+}
+
+
+@media screen and (max-width:480px) {
+    .BannerSection {
+        width: 100%;
+        min-width: 100%;
+        min-height: 30rem;
+        background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0, 132, 196, 0.45) 66%, rgba(0, 132, 196, 0.25) 100%), url('../images/people-running-marathon.jpeg');
+        background-position: 20% 20%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        margin: 0 0 1rem 0;
+    }
+}
+
+
+
+@media screen and (max-width:360px) {
+
 }
