--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,7 +2,7 @@
     color: rgba(3,151,215,1);
     font-variant: small-caps;
     margin: auto;
-    padding: 1rem 2rem!important;
+    padding: 1rem 2rem;
     font-size: 18px;
     border-radius: 50px;
 	border: 2px solid rgba(255, 255, 255,0);
@@ -15,7 +15,7 @@
     background: #25ACDF;
     background-color: #25ACDF;
     border-color: #25ACDF;
-	color: white!important;
+	color: white;
 	border-radius: 50px;
 	-webkit-transition: 0.4s all ease-in-out;
 	-o-transition: 0.4s all ease-in-out;
@@ -24,12 +24,57 @@
 
 .nav-link:active {
 	background: #FFF;
-	color: rgba(3,151,215,1)!important;
+	color: rgba(3,151,215,1);
     border-radius: 50px;   
 }
 
 .navbar-light .navbar-nav .nav-link {
     color: rgba(3,151,215,1);
+    padding: 1rem 2rem;
+}
+.navbar-light .navbar-nav .nav-link:hover {
+    color: white;
+    background: #25ACDF;
+    background-color: #25ACDF;
+    border-color: #25ACDF;
+    color: white;
+    border-radius: 50px;
+    transition: 0.4s all ease-in-out;
+}
+
+
+.navbar-light .navbar-nav .nav-link:active {
+    color: white;
+    background: #25ACDF;
+    background-color: #25ACDF;
+    border-color: #25ACDF;
+    color: white;
+    border-radius: 50px;
+    transition: 0.4s all ease-in-out;
+}
+    /*color: rgba(3,151,215,1);*/
+
+
+/*
+.navbar-light .navbar-nav .nav-link.active {
+    color: rgba(3,151,215,1);
+}
+*/
+
+.navbar-light .navbar-nav .nav-link:focus {
+    /*color: rgba(3,151,215,1);*/
+    color: white;
+    background: #25ACDF;
+    background-color: #25ACDF;
+    border-color: #25ACDF;
+    color: white;
+    border-radius: 50px;
+    transition: 0.4s all ease-in-out;
+
+}
+
+a.dropdown-item {
+    color: #25ACDF;
 }
 
 
