--- a/src/components/PageComponents/Treatments/treatment.module.css
+++ b/src/components/PageComponents/Treatments/treatment.module.css
@@ -1,47 +1,185 @@
-.TreatmentBlocks {
-    width: 100%;
-    min-height: 50px;
-    background-color: rgba(0, 132, 196, 1);
-    text-align: center;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    display: inline-flex;
-    font-weight: 500;
-    line-height: 1.2;
-    padding: 0 3rem;
-    margin: 0.5rem auto;
+.sidebarPageContainer {
+    position: relative;
+    padding: 100px 0px 60px;
 }
 
-.MiniBanner {
-    width: 100%;
-    min-width: 100%;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 33%, rgba(0, 0, 0, .15) 66%, rgba(0, 0, 0, 0.1) 100%), url('../../../images/people-running-marathon.jpeg');
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: local;
-    margin: 0 0 1rem 0;
-    padding: 5% 0;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    text-align: center;
+.autoContainer {
+    position: static;
+    max-width: 1200px;
+    padding: 0px 15px;
+    margin: 0 auto;
 }
 
-.MiniBannerButton {
-    background: #0397d7;
-    color: white;
-    text-decoration: none;
-    padding: 15px 10px;
-    border-radius: 50px;
-    text-align: center;
-    font-weight: 700;
-    font-size: 22px;
-    outline: none;
+.sidebarWidget {
+        position: relative;
+        margin-bottom: 30px;
+    }
+
+.Categories {
+    position: relative;
+}
+
+.Categories li {
+    position: relative;
+    margin-bottom: 4px;
+}
+
+.AsideCategories {
+    display: block;
+}
+
+.Categories li a {
+    position: relative;
+    color: #0397d7;
+    font-size: 17px;
+    font-weight: 600;
+    padding: 14px 15px 14px 22px;
+    display: block;
+    border-left: 4px solid #d2d2d2;
+    background-color: #f1f1f1;
+    transition: all 500ms ease;
+    -moz-transition: all 500ms ease;
+    -webkit-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+}
+
+.Categories li a:hover {
+    color:#ffffff!important;
+	/*border-color:#196c7b;
+    background-color:#55b6c7;*/
+    border-color: #08668f!important;
+    background-color: #0397d7!important;
+}
+
+.active {
+    color:#ffffff;
+	/*border-color:#196c7b;
+    background-color:#55b6c7;*/
+    border-color: #08668f;
+    background-color: #0397d7;
+}
+
+.active a{
+    color:#ffffff!important;
+	/*border-color:#196c7b;
+    background-color:#55b6c7;*/
+    border-color: #08668f!important;
+    background-color: #0397d7!important;
+}
+
+.ListWidget {
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.ListWidget ul {
+    position: relative;
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
+.ListWidget ul li {
+    position: relative;
+    font-size: 16px;
+    font-weight: 600;
+    color: #242424;
+    padding-left: 10px;
+    margin-bottom: 12px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.ServicesSingle {
+    position: relative;
+}
+
+.InnerBox {
+    position: relative;
+}
+
+.ServicesTopImage {
+    position: relative;
+    margin-bottom: 50px;
+}
+
+.InnerBox h2{
+    position: relative;
+    color: #242424;
+    font-size: 28px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.InnerText {
+    position: relative;
+}
+.InnerText p {
+    position: relative;
+    color: #797979;
+    font-size: 17px;
+    line-height: 1.7em;
+    margin-bottom: 18px;
+}
+
+.ServicesTopImage img {
+    position: relative;
     width: 100%;
-    max-width: 300px;
-    border: 2px solid;
-    margin: 2rem auto;
+    display: block;
+}
+
+.ColumnTwo {
+    position: relative;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.ServicesTherapyList {
+    position: relative;
+    margin-bottom: 40px;
+}
+
+.ServicesTherapyList li {
+    position: relative;
+    padding-left: 30px;
+    margin-bottom: 12px;
+    color: #797979;
+    font-size: 17px;
+    font-weight: 400;
+}
+
+.ServicesTherapyList li:before {
+    position:absolute;
+	content:'\f106';
+	left:0px;
+	top:2px;
+	color:#55b6c7;
+	font-size:18px;
+	font-family: "Flaticon";
+}
+
+@media screen and (max-width: 980px) {
+    .AsideCategories {
+        display: block;
+    }
+}
+
+
+@media screen and (max-width: 767px) {
+    .AsideCategories {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .AsideCategories {
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 360px) {
+    .AsideCategories {
+        display: none;
+    }
 }
