--- a/src/components/banner.module.css
+++ b/src/components/banner.module.css
@@ -23,7 +23,18 @@
 
 
 @media screen and (max-width: 980px) {
-
+    .BannerSection {
+        width: 100%;
+        min-width: 100%;
+        min-height: 25rem;
+        background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0, 132, 196, 0.45) 66%, rgba(0, 132, 196, 0.25) 100%), url('../images/people-running-marathon-cropped.jpeg');
+        background-position: 70% 20%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: local;
+        margin: 0 0 1rem 0;
+        padding: 2rem 0 0;
+    }
 }
 
 
@@ -38,13 +49,15 @@
     .BannerSection {
         width: 100%;
         min-width: 100%;
-        min-height: 30rem;
-        background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0, 132, 196, 0.45) 66%, rgba(0, 132, 196, 0.25) 100%), url('../images/people-running-marathon.jpeg');
-        background-position: 20% 20%;
+        min-height: 20rem;
+        background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0, 132, 196, 0.45) 66%, rgba(0, 132, 196, 0.25) 100%), url('../images/people-running-marathon-longcrop.jpeg');
+        background-position: 50% 20%;
         background-size: cover;
         background-repeat: no-repeat;
-        background-attachment: fixed;
-        margin: 0 0 1rem 0;
+        background-attachment: scroll;
+        margin: 2rem 0 1rem 0;
+        padding: 2rem 0 0;
+
     }
 }
 
