--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -12,28 +12,50 @@
 .LogoBlock {
     display: block;
     margin: 5rem auto 2rem;
-    width: 100%;
+    width: 50%;
     background-color: rgba(255, 255, 255, 0.7);
     border: 1px solid;
     border-color: rgba(255, 255, 255, 0.9);
     border-radius: 10px;
     padding: 1rem 2rem;
+        -moz-justify-content: center;
+    -webkit-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+        -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+        -moz-align-content: center;
+    -webkit-align-content: center;
+    -ms-align-content: center;
+    align-content: center;
+
   }
 
 
 
 .Logo {
-    display: inline-block;
+    display: block;
     margin: auto;
-    width: 100%;
+    width: 70%;
     padding: 1rem 2rem;
   }
   
   .SocialIcon {
     width: 100%;
     min-height: 50px;
+        -moz-justify-content: center;
+    -webkit-justify-content: center;
+    -ms-justify-content: center;
     justify-content: center;
+        -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
     align-items: center;
+        -moz-align-content: center;
+    -webkit-align-content: center;
+    -ms-align-content: center;
     align-content: center;
     text-align: center;
     font-size: 3rem;
@@ -57,8 +79,17 @@
   .LinkBox {
     display: flex;
     flex-direction: column;
+        -moz-justify-content: center;
+    -webkit-justify-content: center;
+    -ms-justify-content: center;
     justify-content: center;
+        -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
     align-items: center;
+        -moz-align-content: center;
+    -webkit-align-content: center;
+    -ms-align-content: center;
     align-content: center;
     text-align: center;
   }
@@ -75,6 +106,8 @@
     border: 1px solid;
     border-color: rgba(255, 255, 255, 0.9);
     border-radius: 5px;
+    width: 100%;
+    margin: 6rem 0;
   }
   
   .FooterRow {
@@ -115,9 +148,18 @@
       display: inline-flex;
       width: 100%;
       min-height: 50px;
-      justify-content: center;
-      align-items: center;
-      align-content: center;
+          -moz-justify-content: center;
+    -webkit-justify-content: center;
+    -ms-justify-content: center;
+    justify-content: center;
+          -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+          -moz-align-content: center;
+    -webkit-align-content: center;
+    -ms-align-content: center;
+    align-content: center;
       text-align: center;
       font-size: 3rem;
       margin: auto;
@@ -125,17 +167,18 @@
     }
   
     .CenterFooter {
-      margin: 50% auto;
+      margin: 20% auto 5%;
       padding: 0px;
     }
   
     .Middle {
       background-color: rgba(255, 255, 255, 0.7);
-      margin: 20% 1.5rem;
-      padding: 0 1rem;
+      margin: 5% auto;
+      padding: 2rem 3rem;
       border: 1px solid;
       border-color: rgba(255, 255, 255, 0.9);
       border-radius: 5px;
+      width: 80%;
     }
   
     .Spacer {
@@ -155,7 +198,7 @@
     .LogoBlock {
         display: block;
         margin: 0 auto 0 auto;
-        width: 100%;
+        width: 80%;
         background-color: rgba(255, 255, 255, 0.7);
         border: 1px solid;
         border-color: rgba(255, 255, 255, 0.9);
@@ -168,7 +211,7 @@
         display: block;
         margin: auto;
         width: 50%;
-        padding: 2rem;
+        padding: 1rem;
       }
 
 
@@ -189,13 +232,12 @@
   @media screen and (max-width: 480px) {
     .FooterRow {
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
     }
   
     .Middle {
       margin: auto;
-      padding: 1rem 1rem 0;
-      width: 90vw;
+      padding: 2rem 0.5rem 2rem 1rem;
     }
   
     .ColNoMobile {
