--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -37,11 +37,17 @@
 .NavBar {
     flex-basis: 100%;
     flex-grow: 1;
+        -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
     align-items: center;
     display: flex!important;
     flex-direction: row;
     flex-basis: auto;
     flex-wrap: nowrap;
+        -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
     align-items: center;
     border-image-repeat: stretch;
     border-image-width: initial;
