--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -109,6 +109,13 @@
     width: 100%;
     margin: 6rem 0;
   }
+
+  .Middle p {
+    color: white;
+    text-shadow: 1px 2px 2px #00000083;
+    font-size: 16px;
+    font-weight: 500;
+  }
   
   .FooterRow {
     display: flex;
