--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,7 @@
+body {
+
+}
+
 .nav-link {
     color: rgba(3,151,215,1);
     font-variant: small-caps;
@@ -117,6 +121,211 @@ a.dropdown-item:focus {
 .NoDesktop {
     display: none;
 }
+.form-group {
+    width: 80%;
+    margin: auto;
+    padding-left: 3rem;
+}
+
+
+form .inner {
+	display: inline-flex;
+	max-width: 100%;
+	-moz-flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	-moz-flex-direction: column;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
+}
+
+form label {
+	display: block;
+}
+
+form input[type="text"], form input[type="email"], form textarea, form select, form input[type="tel"], form .file, form input[type="textarea"] {
+	text-align: left;
+	display: block;
+	background-color: #fafafa;
+	width: 100%;
+	outline: 0;
+	border: 1px solid #e4e9ea;
+	border-radius: 3px;
+	transition: all .25s;
+	padding: 10px;
+    margin: 1em 0 1em;
+    width: 100%;
+}
+
+
+form textarea {
+	height: 10rem;
+	line-height: normal;
+}
+
+form input[type="textarea"] {
+	height: 10rem;
+	line-height: normal;
+}
+
+form select {
+	background-size: 1rem;
+	background-repeat: no-repeat;
+	text-overflow: ellipsis;
+	-webkit-appearance: none;
+}
+
+form select option {
+	background-color: white;
+	color: black;
+}
+
+form select::-ms-expand {
+	display: none;
+}
+
+form input[type="checkbox"] {
+	-webkit-appearance: none;
+	display: block;
+	float: left;
+	margin-right: -2rem;
+	opacity: 0;
+	width: 1rem;
+	z-index: 3;
+}
+
+form input[type="checkbox"] + label {
+	display: inline-flex;
+	text-align: left;
+	line-height: 1.6;
+	-moz-align-items: center;
+	-webkit-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+}
+
+form input[type="checkbox"] + label:before {
+	content: '';
+	display: inline-block;
+	background-position: center;
+	background-repeat: no-repeat;
+	vertical-align: middle;
+	cursor: pointer;
+	-moz-flex-grow: 0;
+	-webkit-flex-grow: 0;
+	-ms-flex-grow: 0;
+	flex-grow: 0;
+	-moz-flex-shrink: 0;
+	-webkit-flex-shrink: 0;
+	-ms-flex-shrink: 0;
+	flex-shrink: 0;
+}
+
+form .file {
+	position: relative;
+}
+
+form .file > input[type="file"] {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	cursor: pointer;
+}
+
+form .file[data-filename]:before {
+	content: attr(data-filename);
+	display: block;
+	white-space: nowrap;
+	position: absolute;
+	top: 0;
+	height: 100%;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	background-position: left;
+	background-repeat: no-repeat;
+}
+
+form .file[data-filename=""]:before {
+	content: attr(data-placeholder);
+	background-image: none !important;
+	padding-left: 0 !important;
+}
+
+form .file:after {
+	-moz-transition: opacity 0.35s ease, color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+	-webkit-transition: opacity 0.35s ease, color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+	-ms-transition: opacity 0.35s ease, color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+	transition: opacity 0.35s ease, color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+	background-color: transparent;
+	border: 0;
+	display: block;
+	content: '';
+	position: absolute;
+	cursor: pointer;
+	-moz-pointer-events: none;
+	-webkit-pointer-events: none;
+	-ms-pointer-events: none;
+	pointer-events: none;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+form .actions {
+	max-width: 100%;
+}
+
+form button {
+	background-color: #25ACDF!important;
+	border: 5px solid #25ACDF;
+	color: #ffffff;
+	text-shadow: 1px 1px 1px #000000;
+	font-weight: 700;
+	border-radius: 5px;
+	padding: 1em 2em;
+	cursor: pointer;
+	text-align: center;
+	max-width: 100%;
+	white-space: nowrap;
+	-moz-transition: opacity 0.35s ease, color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+	-webkit-transition: opacity 0.35s ease, color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+	-ms-transition: opacity 0.35s ease, color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+	transition: opacity 0.35s ease, color 0.25s ease, background-color 0.25s ease, border-color 0.25s ease;
+	-moz-display: inline-flex;
+	-webkit-display: inline-flex;
+	-ms-display: inline-flex;
+	display: inline-flex;
+	-moz-align-items: center;
+	-webkit-align-items: center;
+	-ms-align-items: center;
+	align-items: center;
+	-moz-justify-content: center;
+	-webkit-justify-content: center;
+	-ms-justify-content: center;
+	justify-content: center;
+	vertical-align: middle;
+}
+
+
+form button:hover{
+	background-color: #25ACDF!important;
+	border-color: #25ACDF!important;
+}
+
+
+form button:disabled {
+	opacity: 0.35;
+	cursor: default;
+	-moz-pointer-events: none;
+	-webkit-pointer-events: none;
+	-ms-pointer-events: none;
+	pointer-events: none;
+}
+
 
 @media screen and (max-width: 1680px) {
     .NoMobile{
@@ -195,6 +404,12 @@ a.dropdown-item:focus {
         background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(3,151,215,0.8)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
     }
 
+    .form-group {
+        width: 80%;
+        margin: auto;
+        padding: 0;
+    }
+    
 }
 
 @media screen and (max-width: 360px) {
