--- a/src/components/PageComponents/Home/home.module.css
+++ b/src/components/PageComponents/Home/home.module.css
@@ -48,6 +48,30 @@
   transition: 0.4s all ease-in-out;
 }
 
+.BelowHero {
+  background-color: white;
+  margin: 1rem auto;
+  padding: 2rem;
+  height: 20rem;
+}
+
+.BelowHero h3 {
+  text-align: center;
+    font-weight: 400;
+    color: #4f5875;
+    margin: 0px;
+    padding: 0px;
+    font-size: 45px;
+    text-transform: uppercase;
+}
+
+.BelowHero p {
+  margin: auto;
+  padding: 3rem;
+  color: #0397d7;
+  font-size: 1.3rem;
+}
+
 .ReversedRow {
   display: flex;
   flex-direction: row;
@@ -69,6 +93,16 @@
   padding: 5% 0px 10% 0px;
   z-index: 2;
   min-height: 40rem;
+}
+
+.NewPatientSection h2 {
+  font-weight: 700;
+  font-size: 40px;
+  margin: 0px;
+  padding: 0px;
+  text-transform: uppercase;
+  text-align: left;
+  color: #ffffff;
 }
 /*
 .NewPatientSection:after {
@@ -94,12 +128,17 @@
   text-align: left;
   color: #ffffff;
 }
+
+.DeserveText {
+  margin: 2rem auto auto;
+  padding: 2rem 0;
+}
 .NewPatientSection p {
   font-weight: 400;
   font-size: 20px;
-  margin: 0px;
+  margin: auto;
   padding: 20px 0px;
-  text-transform: uppercase;
+  text-transform: none;
   text-align: left;
   color: #ffffff;
 }
@@ -196,8 +235,7 @@
 }
 .SpecializeTopMargin {
   position: relative; 
-  margin-top: 50px;
-  margin: 50px 2rem;
+  margin: 50px 2rem 0px;
   padding: 2rem 5rem;
 
 }
@@ -210,10 +248,30 @@
   margin: 0 1rem 50px;
   width: auto;
   height: auto;
+  transition:all 0.3s ease;
+	-moz-transition:all 0.3s ease;
+	-webkit-transition:all 0.3s ease;
+	-ms-transition:all 0.3s ease;
+	-o-transition:all 0.3s ease;
 }
+
+.SpecializeBox:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+  transition:all 0.3s ease;
+	-moz-transition:all 0.3s ease;
+	-webkit-transition:all 0.3s ease;
+	-ms-transition:all 0.3s ease;
+	-o-transition:all 0.3s ease;
+}
+
 .SpecializeBox img {
   border-radius: 10px 10px 0px 0px;
   width: 100%;
+}
+
+.SpecializeBox a {
+  text-decoration: none;
 }
 .SpecializeSection a.blue-btns {
   display: inline-block;
@@ -375,6 +433,9 @@ background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0
     padding: 0px;
 }
 
+.Table {
+  margin: 0 0 2rem;
+}
 
 .TimeTable {
 	position: relative; 
@@ -790,7 +851,7 @@ background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0
   }
   .SpecializeTopMargin {
     margin-top: 25px;
-    display: block;
+    display: flex;
     margin: 25px auto;
     padding: 0px;
   }
@@ -805,7 +866,7 @@ background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0
 
 .AffiliatesSlider {
 	position: relative; 
-	display: block;
+	display: flex;
 	justify-content: space-between;
   padding: 2px 30px 0;
 }
