--- a/src/components/PageComponents/NewPatients/newpatients.css
+++ b/src/components/PageComponents/NewPatients/newpatients.css
@@ -164,7 +164,7 @@
 	content:'\f00c';
 	left:0px;
 	top:0px;
-	color:#55b6c7;
+	color:#0397d7;
 	font-size:14px;
 	font-family: 'FontAwesome';
 }
@@ -188,11 +188,14 @@
 	display:inline-block;
 	padding:8px 26px;
 	border-radius:50px;
+	border: 1px solid #0397d7;
 	text-transform:capitalize;
 	font-family: 'Montserrat', sans-serif;
 }
 
 .btn-style-seven:hover{
 	color:#ffffff;
-	background-color:#55b6c7;
+	background-color:#0397d7;
+	border: 1px solid white;
+
 }
