--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,8 +18,8 @@ body {
 	width: 100%;
 }
 .container {
-	max-width: 1240px;
-	width: 100%;
+	/*max-width: 1240px;
+	width: 100%;*/
 }
 
 .NoMobile{
@@ -28,8 +28,8 @@ body {
 
 @media (max-width:1280px) {
 .container {
-	max-width: 100%;
-	width: 100%;
+	/*max-width: 100%;
+	width: 100%;*/
 }
 .NoMobile{
 	display: block;
@@ -51,7 +51,7 @@ body {
 
 
 h2 {
-	font-size: 45px;
+	font-size: 35px;
 }
 h3 {
 	font-size: 18px;
@@ -140,7 +140,8 @@ a.blue-btns {
 /*** ### Header ### ***/
 header {
 	position: relative; 
-	background: #fcfcfc;
+	/*background: #fcfcfc;*/
+	background-color: transparent;
 	padding: 15px 0px;
 	z-index: 9999;
 }
