--- a/src/components/cta.module.css
+++ b/src/components/cta.module.css
@@ -7,7 +7,7 @@
     -webkit-align-items: center;
     -ms-align-items: center;
     align-items: center;
-    margin: 0 auto;
+    margin: 3rem auto;
     width: 70em;
     padding: 0;
   }
@@ -141,7 +141,7 @@
   }
 
   .cta > .inner > * {
-    width: 80%;
+    width: 50%;
     padding-left: 0;
   }
   }
