--- a/src/components/PageComponents/Home/home.module.css
+++ b/src/components/PageComponents/Home/home.module.css
@@ -23,12 +23,17 @@
 }
 .HeroSection p {
   font-weight: 400;
-  font-size: 20px;
+  font-size: 22px;
   margin: 0px;
   padding: 20px 0px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   text-align: left;
-  color: #000000;
+  color: #0397d7;
+  /*font-family: 'Open Sans', sans-serif;*/
+  font-family: 'Roboto Condensed', sans-serif;
+  letter-spacing: 1.5px;
+  word-spacing: 3px;
+  text-shadow: 2px 2px 2px rgb(170, 209, 224);
 }
 .HeroSection a.blue-btns {
   display: inline-block;
@@ -47,6 +52,12 @@
   -webkit-transition: 0.4s all ease-in-out;
   -o-transition: 0.4s all ease-in-out;
   transition: 0.4s all ease-in-out;
+}
+
+.HeroSection hr {
+  color: #25ACDF;
+  border-color: rgba(109,0,115,0.37);
+  border-width: 2px;
 }
 
 .BelowHero {
@@ -131,7 +142,7 @@
 }
 
 .DeserveText {
-  margin: 2rem auto auto;
+  margin: auto auto 10rem auto;
   padding: 2rem 0;
 }
 .NewPatientSection p {
@@ -158,6 +169,7 @@
 }
 .MeetDoctorSection .DoctorImage {
   position: relative; 
+  padding: 5px;
 }
 .MeetDoctorSection .DoctorImage img {
   border-radius: 10px;
@@ -329,9 +341,14 @@
 	color: #0397d7;
 	margin: 20px auto;
 }
-.SucessSection .cx_star {
+
+
+.stars {
 	position: relative; 
-	margin: 20px 0px;
+  margin: 20px 0px;
+  color: yellow;
+  fill: yellow;
+  font-size: 2rem;
 }
 .SucessSection .cx_star span {
 	display: inline-block;
@@ -554,8 +571,8 @@ background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0
     text-rendering: auto;
     line-height: inherit;
     text-align: center;
-    color: #8CC152;
-    font-size: 19px;
+    color: white;
+    font-size: 2.5rem;
 }
 
 .CTAMessage {
@@ -565,20 +582,20 @@ background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0
   text-rendering: auto;
   line-height: inherit;
   text-align: center;
-  color: #6D0073;
-  font-size: 19px;
+  color: white;
+  font-size: 2.5rem;
  
 }
 
-.CTASchedule {
+.CTACalendar {
   padding-right: 3px;
   font-weight: 900;
   display: inline-block;
   text-rendering: auto;
   line-height: inherit;
   text-align: center;
-  color: #0397D7;
-  font-size: 19px;
+  color: white;
+  font-size: 2.5rem;
 
 }
 
@@ -934,7 +951,7 @@ background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0
     font-size: 35px;
   }
   .HeroSection p {
-    font-size: 16px;
+    font-size: 18px;
   }
 
   .NewPatientSection {
@@ -942,10 +959,10 @@ background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0
     margin: 2rem auto;
   }
   .NewPatientSection h1 {
-    font-size: 25px;
+    font-size: 26px;
   }
   .NewPatientSection p {
-    font-size: 15px;
+    font-size: 18px;
   }
 
   .MeetDoctorSection .DoctorImage img {
@@ -1005,7 +1022,7 @@ h1 .HeroTitle {
     background-position:  70% 100%;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 30rem;
+    min-height: 35rem;
     margin: 40% auto auto auto;
   }
   .HeroMobile {
@@ -1029,7 +1046,23 @@ h1 .HeroTitle {
     line-height: 80px;
     border-bottom: solid 1px rgba(0,0,0,.05);
     margin: auto 0;
-    height: 80px;
+    height: 150px;
+    }
+
+    .HeroMobileCTA p {
+      font-weight: 400;
+      font-size: 22px;
+      line-height: 30px;
+      margin: auto;
+      padding: 0.5rem;
+      text-transform: capitalize;
+      text-align: center;
+      color: #0397d7;
+      /*font-family: 'Open Sans', sans-serif;*/
+      font-family: 'Roboto Condensed', sans-serif;
+      letter-spacing: 1.5px;
+      word-spacing: 3px;
+      text-shadow: 2px 2px 2px rgb(170, 209, 224);
     }
 
   .CTAIcon {
@@ -1061,12 +1094,32 @@ h1 .HeroTitle {
       min-height: 5rem;
     }
 
+    .NewPatientSection {
+      margin: auto;
+      padding: 15% 10px;
+    }
+
+    .NewPatientSection p {
+      font-size: 20px;
+    }
+
+    .TimeTable {
+      padding: 0 0 2rem 0;
+      margin-top: -5%;
+    }
+
+    .MeetDoctorSection .DoctorDetails {
+      padding: 30px 5px;
+    }
+
     .SpecializeTopMargin {
       margin-top: 25px;
       display: block;
       margin: 25px auto;
       padding: 0px;
     }
+
+
 
 }
 
