--- a/src/components/PageComponents/Home/home.module.css
+++ b/src/components/PageComponents/Home/home.module.css
@@ -28,7 +28,7 @@
   padding: 20px 0px;
   text-transform: capitalize;
   text-align: left;
-  color: #0397d7;
+  color: #6d0073;
   /*font-family: 'Open Sans', sans-serif;*/
   font-family: 'Roboto Condensed', sans-serif;
   letter-spacing: 1.5px;
@@ -301,7 +301,7 @@
 .SucessSection h2 {
 	text-align: center;
 	font-weight: 700;
-	color: #4d5973;
+	color: #6d0073;
 	margin: 0px 0px 15px 0px;
 	padding: 0px;
 	text-transform: uppercase;
@@ -346,8 +346,7 @@
 .stars {
 	position: relative; 
   margin: 20px 0px;
-  color: yellow;
-  fill: yellow;
+  color: gold;
   font-size: 2rem;
 }
 .SucessSection .cx_star span {
@@ -891,7 +890,7 @@ background-image: linear-gradient(to bottom, rgba(0, 132, 196, 0.55) 33%, rgba(0
 
 .AffiliatesSlider {
 	position: relative; 
-	display: flex;
+	display: block;
 	justify-content: space-between;
   padding: 2px 30px 0;
 }
